--- a/vkefu/src/main/resources/templates/chat.html
+++ b/vkefu/src/main/resources/templates/chat.html
@@ -9,6 +9,7 @@
     <!--<script src="/webjars/jquery/jquery.min.js"></script>
     <script src="/webjars/sockjs-client/sockjs.min.js"></script>
     <script src="/webjars/stomp-websocket/stomp.min.js"></script>-->
+    <script src="./webjars/jquery/jquery.min.jquery"></script>
     <script src="../static/js/socket.io.js"></script>
     <script src="../static/js/webIM.js"></script>
    <!-- <script src="/v6/app.js"></script>-->
