添加单聊,群聊前端页面

--- a/vkefu/src/main/resources/templates/apps/im/chat.html
+++ b/vkefu/src/main/resources/templates/apps/im/chat.html
@@ -6,7 +6,7 @@
     <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/main.css" rel="stylesheet">
     <script src="/webjars/jquery/jquery.min.js"></script>
-    <script src="/js/socket.io.js"></script>
+    <script src="/js/plugin/socket.io.js"></script>
 </head>
 <body>
 <div id="main-content" class="container">
@@ -62,5 +62,5 @@
     </div>
 </div>
 </body>
-<script src="/js/webIM.js"></script>
+<script src="/js/im/webIM.js"></script>
 </html>
