--- a/vkefu/src/main/resources/templates/error.html
+++ b/vkefu/src/main/resources/templates/error.html
@@ -4,7 +4,7 @@
 <head>
     <title>Hello WebSocket</title>
     <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/v6/main.css" rel="stylesheet">
+    <link href="/css/main.css" rel="stylesheet">
     <script src="/webjars/jquery/jquery.min.js"></script>
 </head>
 <body>
